2011-10-14  David Levin  <levin@chromium.org>

        watchlist: If the style check fails, then the watchlist will not be run.
        https://bugs.webkit.org/show_bug.cgi?id=69484

        Reviewed by Adam Barth.

        * Scripts/webkitpy/tool/commands/queues.py: Run the watch list even
        if the style part fails and don't allow watch list failures turn the
        bot run red.
        * Scripts/webkitpy/tool/commands/queues_unittest.py: Appropriate unit tests.
        * Scripts/webkitpy/tool/mocktool.py: Add support to make an executive command throw.

2011-10-14  Dimitri Glazkov  <dglazkov@chromium.org>

        Plumb style-checker filter up to command options and make land-cowboy use it.
        https://bugs.webkit.org/show_bug.cgi?id=70119

        Reviewed by Adam Barth.

        * Scripts/webkitpy/style/checker.py: Added ChangeLogChecker categories to the big list.
        * Scripts/webkitpy/style/checkers/changelog.py: Declared categories, used in ChangeLogChecker.
        * Scripts/webkitpy/tool/commands/download.py: Made LandCowboy use filter.
        * Scripts/webkitpy/tool/commands/download_unittest.py: Tweaked the test.
        * Scripts/webkitpy/tool/commands/upload_unittest.py: Ditto.
        * Scripts/webkitpy/tool/steps/checkstyle.py: Made check_style_filter work.
        * Scripts/webkitpy/tool/steps/options.py: Added new option, check-style-filter.

2011-10-14  Sam Weinig  <sam@webkit.org>

        Remove the Leopard slaves.

        Reviewed by Adam Roben.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2011-10-14  Peter Beverloo  <peter@chromium.org>

        [Chromium] Inherit settings from Chromium's envsetup.sh, address a NDK todo
        https://bugs.webkit.org/show_bug.cgi?id=70028

        Reviewed by Adam Barth.

        * Scripts/update-webkit-chromium:
        * Scripts/webkitdirs.pm:
        (buildChromiumMakefile):
        (buildChromium):

2011-10-14  Leandro Pereira  <leandro@profusion.mobi>
